# ReAgent

./: .codecov.yml  .gitignore  .gitmodules  .isort.cfg  CNAME  CONTRIBUTING.md  Horizon.html  Horizon.ml.html  Horizon.ml.rl.html  Horizon.ml.rl.preprocessing.html  Horizon.ml.rl.test.base.html  Horizon.ml.rl.test.constant_reward.html  Horizon.ml.rl.test.gridworld.html  Horizon.ml.rl.test.gym.html  Horizon.ml.rl.test.html  Horizon.ml.rl.test.models.html  Horizon.ml.rl.test.preprocessing.html  Horizon.ml.rl.test.readers.html  Horizon.ml.rl.test.workflow.html  Horizon.ml.rl.test.world_model.html  Horizon.ml.rl.training.html  Horizon.ml.rl.training.world_model.html  Horizon.ml.rl.workflow.html  LICENSE  Makefile  PATENTS  README.md  README.rst  Sparse2Dense.ipynb  api.html  build_fbthrift.sh  continuous_integration.html  distributed.html  genindex.html  index.html  install_compilers.sh  installation.html  license.html  linux_install.sh  make.bat  (+115 more)
.circleci/: config.yml
.jenkins/: README.md  build.sh
_sources/: Horizon.ml.rl.preprocessing.rst.txt  Horizon.ml.rl.rst.txt  Horizon.ml.rl.test.base.rst.txt  Horizon.ml.rl.test.constant_reward.rst.txt  Horizon.ml.rl.test.gridworld.rst.txt  Horizon.ml.rl.test.gym.rst.txt  Horizon.ml.rl.test.models.rst.txt  Horizon.ml.rl.test.preprocessing.rst.txt  Horizon.ml.rl.test.readers.rst.txt  Horizon.ml.rl.test.rst.txt  Horizon.ml.rl.test.workflow.rst.txt  Horizon.ml.rl.test.world_model.rst.txt  Horizon.ml.rl.training.rst.txt  Horizon.ml.rl.training.world_model.rst.txt  Horizon.ml.rl.workflow.rst.txt  Horizon.ml.rst.txt  Horizon.rst.txt  api.rst.txt  continuous_integration.rst.txt  distributed.rst.txt  index.rst.txt  installation.rst.txt  ml.rl.caffe_utils.rst.txt  ml.rl.preprocessing.feature_extractor.rst.txt  ml.rl.preprocessing.identify_types.rst.txt  ml.rl.preprocessing.preprocessor_net.rst.txt  ml.rl.preprocessing.sparse_to_dense.rst.txt  ml.rl.tensorboardX.rst.txt  ml.rl.test.base.rst.txt  ml.rl.test.base.test_tensorboardX.rst.txt  ml.rl.test.base.test_utils.rst.txt  ml.rl.test.constant_reward.test_constant_reward.rst.txt  ml.rl.test.gridworld.gridworld.rst.txt  ml.rl.test.gridworld.gridworld_base.rst.txt  ml.rl.test.gridworld.rst.txt  ml.rl.test.gridworld.test_gridworld_parametric.rst.txt  ml.rl.test.gridworld.test_gridworld_pytorch.rst.txt  ml.rl.test.gridworld.test_gridworld_sac.rst.txt  ml.rl.test.gym.gym_predictor.rst.txt  ml.rl.test.gym.open_ai_gym_environment.rst.txt  (+37 more)
api/: ml.html  ml.rl.evaluation.html  ml.rl.html  ml.rl.models.html  ml.rl.polyfill.html  ml.rl.prediction.html  ml.rl.preprocessing.html  ml.rl.readers.html  ml.rl.simulators.html  ml.rl.thrift.core.html  ml.rl.thrift.html  ml.rl.training.gradient_free.html  ml.rl.training.html  ml.rl.training.ranking.html  ml.rl.training.world_model.html  ml.rl.workflow.html  modules.html  reagent.core.html  reagent.data.html  reagent.evaluation.feature_importance.html  reagent.evaluation.html  reagent.gym.agents.html  reagent.gym.datasets.html  reagent.gym.envs.dynamics.html  reagent.gym.envs.functionality.html  reagent.gym.envs.html  reagent.gym.envs.pomdp.html  reagent.gym.envs.wrappers.html  reagent.gym.html  reagent.gym.policies.html  reagent.gym.policies.samplers.html  reagent.gym.policies.scorers.html  reagent.gym.preprocessors.html  reagent.gym.runners.html  reagent.gym.tests.html  reagent.gym.tests.preprocessors.html  reagent.html  reagent.lite.html  reagent.mab.html  reagent.model_managers.actor_critic.html  (+43 more)
code/: ml.html  ml.rl.html  ml.rl.preprocessing.html  ml.rl.thrift.core.html  ml.rl.thrift.html  ml.rl.training.html  ml.rl.training.world_model.html  ml.rl.workflow.html  modules.html
css/: main.css
docker/: cpu.Dockerfile  cuda.Dockerfile  install_nccl.sh  jenkins.Dockerfile  requirements.txt
docs/: begin.html  begin.md  build.sh  conf.py  contact.html  contact.md  continuous_integration.rst  distributed.rst  doc1.md  doc2.html  doc3.html  doc4.html  doc5.html  index.rst  install.html  (+13 more)
serving/: CMakeLists.txt  requirements.txt  setup.py
serving/examples/ecommerce/: customer_simulator.py
serving/examples/ecommerce/plans/: contextual_bandit.json  heuristic.json  multi_armed_bandit.json
serving/examples/ecommerce/training/: cb_train.json  contextual_bandit.json  contextual_bandit.yaml  timeline.json
serving/reagent/serving/cli/: Main.cpp  Server.cpp  Server.h
serving/reagent/serving/config/: builder.py  config.py  main.py  namespace.py  operators.py  serialize.py
serving/reagent/serving/config/applications/: __init__.py
serving/reagent/serving/config/applications/example/: example.py
serving/reagent/serving/core/: ActionValueScorer.cpp  ActionValueScorer.h  ConfigProvider.cpp  ConfigProvider.h  Containers.cpp  Containers.h  DecisionPlan.cpp  DecisionPlan.h  DecisionService.cpp  DecisionService.h  DecisionServiceException.cpp  DecisionServiceException.h  DiskConfigProvider.cpp  DiskConfigProvider.h  Headers.cpp  Headers.h  InMemoryLogJoiner.cpp  InMemoryLogJoiner.h  LocalRealTimeCounter.cpp  LocalRealTimeCounter.h  LogJoiner.cpp  LogJoiner.h  Operator.cpp  Operator.h  OperatorFactory.cpp  OperatorFactory.h  OperatorRunner.cpp  OperatorRunner.h  PytorchActionValueScorer.cpp  PytorchActionValueScorer.h  RealTimeCounter.cpp  RealTimeCounter.h  SharedParameterHandler.cpp  SharedParameterHandler.h
serving/reagent/serving/operators/: ActionValueScoring.cpp  ActionValueScoring.h  EpsilonGreedyRanker.cpp  EpsilonGreedyRanker.h  Expression.cpp  Expression.h  Frechet.cpp  Frechet.h  InputFromRequest.cpp  InputFromRequest.h  PropensityFit.cpp  PropensityFit.h  Softmax.cpp  Softmax.h  SoftmaxRanker.cpp  SoftmaxRanker.h  Ucb.cpp  Ucb.h
serving/reagent/serving/public_tld/: CMakeLists.txt
serving/reagent/serving/test/: DecisionService_test.cpp  EpsilonGreedyRanker_test.cpp  Expression_test.cpp  Frechet_test.cpp  InMemoryLogJoiner_test.cpp  InputFromRequest_test.cpp  PlanProvider_test.cpp  PropensityFit_test.cpp  PytorchScoring_test.cpp  SoftmaxRanker_test.cpp  Softmax_test.cpp  TestHeaders.cpp  TestHeaders.h  Ucb_test.cpp
serving/scripts/: rasp_to_model.py
(+1371 files in other folders)
