[tool:pytest]
addopts = --verbose -d --tx 2*popen
python_files = reagent/test/*.py reagent/test/**/*.py

[metadata]
name = reagent
version = 0.1
url = https://github.com/facebookresearch/ReAgent
author = Facebook
description = Facebook RL
long_description = file: README.md
license = BSD 3-Clause License

[options]
packages = find:
python_requires = >=3.7
install_requires =
  click>=7.0
  numpy>=1.17.2
  pandas>=1.0.3
  pydantic>=1.4
  torch
  pyspark>=2.4.5
  ruamel.yaml>=0.15.99
  scipy>=1.3.1
  tensorboard>=1.14
  scikit-learn>=0.20.0
  xgboost==0.90

[options.extras_require]
gym = gym[classic_control,box2d,atari]
