[metadata]
name = reagent
version = 0.1
url = https://github.com/facebookresearch/ReAgent
author = Facebook
description = Facebook RL
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License

[options]
packages = find:
python_requires = >=3.8
install_requires =
  click>=7.0
  # ~=1.2.0 for compatibility with gym
  # issue: https://github.com/openai/spinningup/issues/178
  cloudpickle~=1.2.0
  iopath
  fbgemm-gpu-nightly
  numpy>=1.17.2
  pandas>=1.0.3
  # https://github.com/samuelcolvin/pydantic/issues/2042
  pydantic>=1.4,<1.7
  tinydb >= 4.1.1
  tqdm>=4.46.0
  petastorm>=0.9.0
  parameterized>=0.7.4
  pyspark==3.1.1
  pytorch-lightning @ git+https://github.com/PyTorchLightning/pytorch-lightning@9b011606f
  ruamel.yaml>=0.15.99
  scipy>=1.3.1
  tensorboard>=1.14
  scikit-learn>=0.20.0


[options.extras_require]
gym =
  # Some issue with https://github.com/openai/gym/pull/1974
  # Remove the pinning when https://github.com/openai/gym/issues/2058 is fixed
  gym[classic_control,box2d,atari]==0.17.2
  gym_minigrid
  recsim-no-tf

test =
  coverage>=5.1
  pytest-xdist>=1.30.0
  pytest>=5.3
  spark-testing-base==0.10.0
  pytest-cov

ax = ax-platform

lite = nevergrad>=0.4.3

torchrec_gpu =
  fbgemm-gpu-nightly
  torchrec-nightly

torchrec_cpu = torchrec-nightly-cpu


###########
# Linting #
###########

[flake8]
# E203: black and flake8 disagree on whitespace before ':'
# W503: black and flake8 disagree on how to place operators
ignore = E203, W503
max-line-length = 88
exclude =
  .git,__pycache__,docs

[coverage:report]
omit =
  serving/*


###########
# Testing #
###########

[tool:pytest]
addopts = --verbose
python_files = reagent/test/*.py reagent/test/**/*.py reagent/gym/tests/*.py reagent/gym/tests/**/*.py
markers = serial
